syntax = "proto3";
package ArticleManagerPackage;

message ArticleCreateRequest {
    string title = 1;
    string description = 2;
}

message ArticleResponse {
    string id = 1;
    string title = 2;
    string description = 3;
    string created_on = 4;
}

message ArticleListRequest {
    int32 limit = 1;
    int32 page = 2;
}

service ArticleService {
    rpc createBulkEntries(stream ArticleCreateRequest) returns (stream ArticleResponse) {}
    rpc streamEntries(ArticleListRequest) returns (stream ArticleResponse) {}
}